--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     <main>
         <section id="formulario">
+            <h1>Entrada</h1>
             <form name="entrada">
                 <label for="valor">Valor</label>
                 <input type="number" name="valor" id="valor" title="Valor a ser inserido" />
@@ -22,7 +23,7 @@
         </section>
 
         <section id="items">
-            <h1>Items</h1>
+            <h1>Itens</h1>
             <ol>
 
             </ol>
