--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css" />
+    <script src="main.js" ></script>
     <title>Semana 10 - Lucius Faltz</title>
 </head>
 <body>
@@ -33,16 +34,5 @@
     <footer>
         <p>&copy; Lucius Faltz - 2023</p>
     </footer>
-
-    <script>
-
-        const form = document.forms.entrada;
-        form.addEventListener('submit', envia);
-
-        function envia(e){
-            e.preventDefault();
-            console.log("Formulário enviado :)");
-        }
-    </script>
 </body>
 </html>
