--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <form name="entrada">
                 <label for="valor">Valor</label>
                 <input type="number" name="valor" id="valor" title="Valor a ser inserido" />
-                <input type="submit" value="Adicionar">
+                <input type="submit" value="Adicionar" />
+                <input type="button" value="Remover" name="remove" />
             </form>
         </section>
 
